# point-cloud-visualization

./: CMakeLists.txt  README.md
pcd/: left.pcd  right.pcd  target.pcd
src/: advance_visualizer.cpp  pick_point.cpp  simple_visualizer.cpp  surface_normal_visualizer.cpp
